--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "joi": "^17.11.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.4",
     "path": "^0.12.7",
     "winston": "^3.11.0"
